2006-04-19  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_set_font): Do not write font change commands into
	the PostScript output stream of the TeX terminal variants (epslatex,
	pstex, pslatex). All font handling is done via the TeX output stream.
	Bug #1472260

2006-04-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_c_bars) src/plot2d.c (eval_plots):
	Allow user to control the width of whiskerbars on candlestick plots.
	    plot <foo> with candlesticks {whiskerbars {<width>}}

	* demo/utf8.dem:  Provide a demo for use in testing UTF-8 support by
	gnuplot terminals.  This demo will only produce reasonable output on a
	terminal that supports UTF-8 and a current UTF-8 encoded font with the
	relevant character maps.

2006-04-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.h: Add comments to document the meaning of TC_* flag values.

2006-04-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm: Correct typos in help text.

	* src/set.c (set_object): Fix segfault on incomplete command
	'set obj <new>'.

	* src/term.c (init_terminal): Keep initial terminal setting in GNUTERM
	even if it did not actually come from environmental variable GNUTERM.

2006-04-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term init_term): Save value of GNUTERM into a
	user-defined variable on entry.  Use only first word of GNUTERM when
	calling change_term. This allows GNUTERM to contain extended terminal
	specs, e.g.  setenv GNUTERM "png truecolor transparent".

2006-04-12  James R. Van Zandt  <jrv@debian.org>

	* term/cgm.trm (CGM_point): Update cgm_current.edge_visibility
	before cgm_current.edge_color (was displaying some point symbols
	with incorrect edge colors).

2006-04-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox):  Fix bug introduced when adding
	newpath/closepath around the border of 3D plots with 'set view map'.